<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:clickable="true"
    android:background="?android:attr/selectableItemBackground"
    >

    <TextView
        android:id="@+id/cityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="13dp"
        android:text="@string/city_name"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/degree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cityName"
        android:layout_below="@+id/cityName"
        android:text="@string/degree" />

    <ImageView
        android:id="@+id/umbrellaImg"
        android:layout_width="109dp"
        android:layout_height="65dp"
        android:layout_alignTop="@+id/cityName"
        android:layout_toStartOf="@+id/rating"
        app:srcCompat="@drawable/umbrella47" />

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/rating"
        android:layout_below="@+id/umbrellaImg"
        android:text="@string/_2019"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:text="@string/_9_2"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>